# cocoanut

./: .gitignore  ARCHITECTURE.md  COMPREHENSIVE_EXAMPLE.md  CONTAINERS_DEMO_COMPLETE.md  Cargo.toml  DOCUMENTATION.md  DRY_KISS_REFACTORING.md  EXAMPLES_UNIQUE_CONTENT.md  EXAMPLES_UPDATED.md  EXAMPLES_UPDATE_COMPLETE.md  EXAMPLE_UPDATE_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  LAYOUT_AND_COMPONENTS.md  LAYOUT_DEMO_SUMMARY.md  MACOS_FEATURES.md  MACRO_REFACTORING_COMPLETE.md  MIGRATION_PLAN.md  MODULE_STANDARDIZATION.md  PERFORMANCE_OPTIMIZATION.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md  PHASE1_MIGRATION_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_MACRO_APPLICATION_COMPLETE.md  PHASE2_MIGRATION_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_MACRO_APPLICATION_COMPLETE.md  PHASE3_MIGRATION_COMPLETE.md  PHASE4_MACRO_APPLICATION_COMPLETE.md  PHASE4_MIGRATION_COMPLETE.md  PHASE5_MIGRATION_COMPLETE.md  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  ROADMAP_COMPLETE.md  SIMPLE_APP_API.md  SIMPLIFICATION_STRATEGY.md  SRC_ORGANIZATION.md  STRATEGY.md  (+8 more)
examples/: basic_window.rs  components_demo.rs  comprehensive_app.rs  comprehensive_app_simple.rs  comprehensive_components.rs  configurable_components.rs  containers_demo.rs  containers_gui_demo.rs  containers_visual.rs  containers_with_borders.rs  event_binding_example.rs  flexible_components.rs  interactive_controls.rs  layout_and_containers_demo.rs  layout_patterns.rs  menu_app.rs  minimal_app.rs  modern_features.rs  modern_features_simple.rs  phase1_display_demo.rs  phase2_input_widgets_demo.rs  phase3_advanced_layouts_demo.rs  phase4_state_caching_demo.rs  phase5_advanced_features_demo.rs  simplified_api.rs  two_buttons.rs  window_builder_example.rs
src/: advanced_controls.rs  application.rs  async_ui.rs  builder.rs  checkbox.rs  containers.rs  controls.rs  data_display.rs  drawing.rs  error.rs  events.rs  layout.rs  lib.rs  macos_integration.rs  macros.rs  menu.rs  phase3_features.rs  radio.rs  simple_app.rs  slider.rs  streaming.rs  styling.rs  utils.rs  window.rs  window_v2.rs  zero_cost.rs
src/components/: mod.rs
src/components/advanced/: advanced_controls.rs  checkbox.rs  mod.rs  radio.rs  slider.rs
src/components/basic/: button.rs  button_v2.rs  controls_v2.rs  label_v2.rs  mod.rs  textfield_v2.rs
src/components/containers/: containers.rs  mod.rs
src/components/data_display/: data_display.rs  mod.rs
src/core/: delegate.rs  error.rs  layout.rs  layout_anchors.rs  mod.rs  objc_access.rs  traits.rs  utils.rs
src/features/: advanced_views.rs  drawing.rs  mod.rs  phase3_features.rs  zero_cost.rs
src/features/macos/: macos_features.rs  macos_integration.rs  mod.rs
src/simple_app/: app.rs  component.rs  layout.rs  mod.rs
src/systems/: advanced_layouts.rs  builder.rs  builder_macros.rs  callbacks.rs  custom_components.rs  data_display.rs  display.rs  essential_features.rs  events.rs  feedback.rs  file_media_input.rs  input_widgets.rs  layout.rs  layout_containers.rs  mod.rs  multi_page.rs  selection_widgets.rs  state_management.rs  target_action.rs
src/utils/: core_fixes.rs  helpers.rs  macros.rs  mod.rs  objc_property.rs
tests/: async_tests_simple.rs  component_tests.rs  control_tests_simple.rs  drawing_tests_simple.rs  integration_tests.rs  macos_integration_tests_simple.rs  streaming_tests_simple.rs  window_tests.rs  zero_cost_tests_simple.rs
